--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h3> Hello world!</h3>
+<html>
+  <head>
+    <title>Todo List Application</title>
+  </head>
+  <body>
+    Workshop Todo List
+    Make the curriculum 4 pomodoros
+    Buy workshop supplies 3 pomodoros
+    Meet with the volunteer trainers 2 pomodoros
+    Order food for Saturday and Sunday 1 pomodoro
+    Check pre-work assignments 2 pomodoros
+    Send workshop location to all the students 1 pomodoro
+    Have a great workshop 0 pomodoros
+    <h3> Hello world!</h3>
+  </body>
+</html>
