--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
       <li><input type="checkbox"/>Send workshop location to all the students 1 pomodoro</li>
       <li><input type="checkbox"/>Have a great workshop 0 pomodoros</li>
     </ul>
+    <input type="text" placeholder="Add a new todo">
+    <input type="number" placeholder="Pomodoro estimate">
  </body>
 </html>
