--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <html>
   <head>
     <title>Todo List Application</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <hi>Workshop Todo List </hi>
     <ul style="list-style: none;">
-      <li><input type="checkbox"/>Make the curriculum 4 pomodoros</li>
-      <li><input type="checkbox"/>Buy workshop supplies 3 pomodoros</li>
-      <li><input type="checkbox"/>Meet with the volunteer trainers 2 pomodoros</li> 
-      <li><input type="checkbox"/>Order food for Saturday and Sunday 1 pomodoro</li>
-      <li><input type="checkbox"/>Check pre-work assignments 2 pomodoros</li>
-      <li><input type="checkbox"/>Send workshop location to all the students 1 pomodoro</li>
-      <li><input type="checkbox"/>Have a great workshop 0 pomodoros</li>
+      <li><input type="checkbox"/><a href="show.html">Make the curriculum</a> 4 pomodoros</li>
+      <li><input type="checkbox"/><a href="show.html">Buy workshop supplies</a>3 pomodoros</li>
+      <li><input type="checkbox"/><a href="show.html">Meet with the volunteer trainers</a>  2 pomodoros</li> 
+      <li><input type="checkbox"/><a href="show.html">food for Saturday and Sunday</a>  1 pomodoro</li>
+      <li><input type="checkbox"/><a href="show.html">Check pre-work assignments</a> 2 pomodoros</li>
+      <li><input type="checkbox"/><a href="show.html">Send workshop location to all the students</a> 1 pomodoro</li>
+      <li><input type="checkbox"/><a href="show.html">Have a great workshop</a> 0 pomodoros</li>
     </ul>
     <input type="text" placeholder="Add a new todo">
     <input type="number" placeholder="Pomodoro estimate">
+    <input type="submit" value="Add todo">
  </body>
 </html>
