--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
       </li>
       <li>
         <input type="checkbox">
-        Buy workshop supplies
+        <a href="show.html">Buy workshop supplies</a>
         <span class="pomodoro-estimate">3 Pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Meet with the volunteer trainers
+        <a href="show.html">Meet with the volunteer trainers</a>
         <span class="pomodoro-estimate">2 Pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Order food for Saturday and Sunday
+        <a href="show.html">Order food for Saturday and Sunday</a>
         <span class="pomodoro-estimate">1 Pomodoro</span>
       </li>
       <li>
         <input type="checkbox">
-        Check pre-work assignments
+        <a href="show.html">Check pre-work assignments</a>
         <span class="pomodoro-estimate">2 Pomodoros</span>
       </li>
       <li>
         <input type="checkbox">
-        Send workshop location to all the students
+        <a href="show.html">Send workshop location to all the students</a>
         <span class="pomodoro-estimate">1 Pomodoro</span>
       </li>
       <li>
         <input type="checkbox">
-        Have a great workshop
+        <a href="show.html">Have a great workshop</a>
         <span class="pomodoro-estimate">0 Pomodoros</span>
       </li>
     </ul>
