background and text colors

--- a/show.html
+++ b/show.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <input type="checkbox">
-    <h2>Make the curriculum 4 Pomodoros</h2>
+    <h2>Make the curriculum </h2>
     <a href="#">Edit</a>
     <a href="#">Delete</a>
 <a href="index.html">Go back...</a>
