--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
     <title>Todo List Application</title>
     <link rel="stylesheet" href="index.css" type="text/css"/>
   </head>
@@ -43,9 +45,10 @@
       </li>
     </ul>
 
-    <input type="text" placeholder="Add a new todo...">
-    <input type="number" placeholder="Pomodoro estimate...">
-    <input type="submit" value="Add todo">
-    <input id="add-new-todo-button" type="submit" value="Add todo">
+    <div id="new-todo-block">
+      <input class="text-input" id="new-todo-description" type="text" placeholder="Add a new todo...">
+      <input class="text-input" id="new-pomodoro-estimate" type="number" placeholder="Pomodoro estimate...">
+      <input class="button" id="add-new-todo-button" type="submit" value="Add todo">
+    </div>
   </body>
 </html>
