--- a/show.html
+++ b/show.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <input type="checkbox">
-    <h2>Make the curriculum </h2>
-    <a href="#">Edit</a>
+    <h2>Make the curriculum 4 Pomodoros</h2>
+    <a href="#">More info</a>
     <a href="#">Delete</a>
 <a href="index.html">Go back...</a>
   </body>
