--- a/show.html
+++ b/show.html
@@ -1,12 +1,13 @@
 <html>
   <head>
     <title>Todo List Application</title>
+    <link rel="stylesheet" href="show.css" type="text/css"/>
   </head>
   <body>
     <input type="checkbox">
-    <h2>Make the curriculum 4 Pomodoros</h2>
-    <a href="#">More info</a>
-    <a href="#">Delete</a>
+    <h2>Extra information</h2>
+    <a href="#">How to make a todo list</a>
+    <a href="#"></a>
 <a href="index.html">Go back...</a>
   </body>
 </html>
